syntax = "proto3";

package payment;

option go_package="/payment";


service PaymentService {
    rpc Charge(ChargeReq) returns (ChargeResp){}
}


// 💳 信息 
message CreditCardInfo{
    string cradit_card_number = 1;
    int32 credit_card_cvv = 2;
    int32 credit_card_expiration_year = 3;
    int32 credit_card_expiration_mount = 4;
}

message ChargeReq {
    uint32 amount = 1;
    CreditCardInfo credit_card = 2;
    string order_id = 3;
    uint64 user_id = 4;

}
message ChargeResp {
    string transaction_id = 1;
}
